# DigitalOceanFlask

./: .gitignore  LICENSE  README.md  ubuntu_14_04.md  ubuntu_16_04.md
home/demo/projects/ave_caesar/: 01_start_with_gunicorn.py  main.py  pyproject.toml  requirements.txt  update_requirements.sh
home/demo/projects/ave_caesar/static/: style.css
home/demo/projects/ave_caesar/templates/: index.html
